[gd_scene load_steps=20 format=3 uid="uid://d1oqnk3x5kcd5"]

[ext_resource type="Texture2D" uid="uid://cp7p5yy1j762k" path="res://Assets/Player/Char1.png" id="1_dx1k3"]
[ext_resource type="Script" path="res://UI/inventory.gd" id="1_hswfy"]
[ext_resource type="Texture2D" uid="uid://cyg503rbrqhu0" path="res://Assets/Player/Char2.png" id="2_jdtrn"]
[ext_resource type="Texture2D" uid="uid://dvebmf5togxqa" path="res://Assets/Player/Char3.png" id="3_od0n8"]
[ext_resource type="Texture2D" uid="uid://cs8q3hpb32ett" path="res://Assets/Player/Char4.png" id="4_3npwq"]
[ext_resource type="Texture2D" uid="uid://bsmlnawy3815q" path="res://Assets/Equipment/Boots/LeatherBoot.png" id="5_7am21"]
[ext_resource type="Texture2D" uid="uid://djyi0ccd1rksn" path="res://Assets/Equipment/Boots/MetalBoot.png" id="7_iev65"]
[ext_resource type="Texture2D" uid="uid://onqwo55v1c7i" path="res://Assets/Equipment/Garments/LeatherGarment.png" id="8_i8bkd"]
[ext_resource type="Texture2D" uid="uid://bu1ewri2ck3t5" path="res://Assets/Equipment/Garments/MetalGarment.png" id="9_4ni7q"]
[ext_resource type="Texture2D" uid="uid://f4h13cmuvb1v" path="res://Assets/Equipment/Hats/LeatherHat.png" id="10_6ud44"]
[ext_resource type="Texture2D" uid="uid://dqw521wdas6de" path="res://Assets/Equipment/Weapons/WoodSword.png" id="10_lgq7s"]
[ext_resource type="Texture2D" uid="uid://bw08f38qv2itw" path="res://Assets/Equipment/Hats/MetalHat.png" id="11_rqnai"]
[ext_resource type="Texture2D" uid="uid://bs5udyov0avg6" path="res://Assets/Equipment/Weapons/MetalSword.png" id="11_sm41y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0j6n0"]
atlas = ExtResource("1_dx1k3")
region = Rect2(0, 0, 1620, 2160)

[sub_resource type="AtlasTexture" id="AtlasTexture_t02v6"]
atlas = ExtResource("2_jdtrn")
region = Rect2(0, 0, 1620, 2160)

[sub_resource type="AtlasTexture" id="AtlasTexture_otaqf"]
atlas = ExtResource("3_od0n8")
region = Rect2(0, 0, 1620, 2160)

[sub_resource type="AtlasTexture" id="AtlasTexture_rij2m"]
atlas = ExtResource("4_3npwq")
region = Rect2(0, 0, 1620, 2160)

[sub_resource type="SpriteFrames" id="SpriteFrames_f717v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j6n0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j6n0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t02v6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otaqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rij2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otaqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t02v6")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c0m4k"]
bg_color = Color(0.47451, 0.47451, 0.47451, 1)

[node name="Inventory" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hswfy")

[node name="Items" type="Node2D" parent="."]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.70173, 0.70173, 0.70173, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer"]
position = Vector2(281, 303)
scale = Vector2(0.241975, 0.223611)
sprite_frames = SubResource("SpriteFrames_f717v")
frame_progress = 0.662763

[node name="Panels" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0

[node name="ShoesPanel" type="Panel" parent="CanvasLayer/Panels"]
show_behind_parent = true
layout_mode = 0
offset_left = 86.0
offset_top = 414.0
offset_right = 126.0
offset_bottom = 454.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Panels/ShoesPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1

[node name="HatPanel" type="Panel" parent="CanvasLayer/Panels"]
layout_mode = 0
offset_left = 223.0
offset_top = 86.0
offset_right = 263.0
offset_bottom = 126.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Panels/HatPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1

[node name="GarmentPanel" type="Panel" parent="CanvasLayer/Panels"]
layout_mode = 0
offset_left = 63.0
offset_top = 254.0
offset_right = 103.0
offset_bottom = 294.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Panels/GarmentPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1

[node name="WeaponPanel" type="Panel" parent="CanvasLayer/Panels"]
layout_mode = 0
offset_left = 487.0
offset_top = 271.0
offset_right = 527.0
offset_bottom = 311.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Panels/WeaponPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1

[node name="Buttons" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0

[node name="ShoesMenuButt" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 0
offset_left = 869.0
offset_top = 125.0
offset_right = 923.0
offset_bottom = 156.0
text = "Shoes"

[node name="GarmentsMenuButt" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 0
offset_left = 871.0
offset_top = 286.0
offset_right = 956.0
offset_bottom = 317.0
text = "Garments"

[node name="HatsMenuButt" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 0
offset_left = 867.0
offset_top = 223.0
offset_right = 921.0
offset_bottom = 254.0
text = "Hats"

[node name="WeaponsMenuButt" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 0
offset_left = 869.0
offset_top = 173.0
offset_right = 949.0
offset_bottom = 204.0
text = "Weapons"

[node name="ReturnButt" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 0
offset_left = 27.0
offset_top = 18.0
offset_right = 88.0
offset_bottom = 49.0
text = "Return
"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -323.0
offset_right = 2.0
offset_bottom = 322.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.633757, 0.633757, 0.633757, 1)

[node name="GridMenus" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0

[node name="ShoesMenu" type="Control" parent="CanvasLayer/GridMenus"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 801.0
offset_top = 70.0
offset_right = 801.0
offset_bottom = 70.0

[node name="CloseButton" type="Button" parent="CanvasLayer/GridMenus/ShoesMenu"]
layout_mode = 0
offset_left = -1.0
offset_top = -60.0
offset_right = 17.0
offset_bottom = -29.0
text = "X"

[node name="ShoesGrid" type="GridContainer" parent="CanvasLayer/GridMenus/ShoesMenu"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
offset_right = 3244.0
offset_bottom = 2160.0
scale = Vector2(0.05, 0.05)
theme_override_constants/h_separation = 80
theme_override_constants/v_separation = 80
columns = 2

[node name="LeatherBootsButton" type="Button" parent="CanvasLayer/GridMenus/ShoesMenu/ShoesGrid"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.47451, 0.47451, 0.47451, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 300
theme_override_styles/focus = SubResource("StyleBoxFlat_c0m4k")
disabled = true
text = "Leather"
icon = ExtResource("5_7am21")
flat = true
icon_alignment = 1

[node name="MetalBootsButton" type="Button" parent="CanvasLayer/GridMenus/ShoesMenu/ShoesGrid"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.47451, 0.47451, 0.47451, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 300
theme_override_styles/focus = SubResource("StyleBoxFlat_c0m4k")
disabled = true
text = "Metal"
icon = ExtResource("7_iev65")
flat = true
icon_alignment = 1

[node name="GarmentsMenu" type="Control" parent="CanvasLayer/GridMenus"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 801.0
offset_top = 70.0
offset_right = 801.0
offset_bottom = 70.0

[node name="CloseButton" type="Button" parent="CanvasLayer/GridMenus/GarmentsMenu"]
layout_mode = 0
offset_left = -1.0
offset_top = -60.0
offset_right = 17.0
offset_bottom = -29.0
text = "X"

[node name="GarmentsGrid" type="GridContainer" parent="CanvasLayer/GridMenus/GarmentsMenu"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
offset_right = 3244.0
offset_bottom = 2160.0
scale = Vector2(0.05, 0.05)
columns = 2

[node name="LeatherGarmentButton" type="Button" parent="CanvasLayer/GridMenus/GarmentsMenu/GarmentsGrid"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.47451, 0.47451, 0.47451, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 300
theme_override_styles/focus = SubResource("StyleBoxFlat_c0m4k")
disabled = true
text = "Leather"
icon = ExtResource("8_i8bkd")
flat = true
icon_alignment = 1
vertical_icon_alignment = 2

[node name="MetalGarmentButton" type="Button" parent="CanvasLayer/GridMenus/GarmentsMenu/GarmentsGrid"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.47451, 0.47451, 0.47451, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 300
theme_override_styles/focus = SubResource("StyleBoxFlat_c0m4k")
disabled = true
text = "Metal"
icon = ExtResource("9_4ni7q")
flat = true
icon_alignment = 1
vertical_icon_alignment = 2

[node name="WeaponsMenu" type="Control" parent="CanvasLayer/GridMenus"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 801.0
offset_top = 70.0
offset_right = 801.0
offset_bottom = 70.0

[node name="CloseButton" type="Button" parent="CanvasLayer/GridMenus/WeaponsMenu"]
layout_mode = 0
offset_left = -1.0
offset_top = -60.0
offset_right = 17.0
offset_bottom = -29.0
text = "X"

[node name="WeaponsGrid" type="GridContainer" parent="CanvasLayer/GridMenus/WeaponsMenu"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
offset_right = 3244.0
offset_bottom = 2160.0
scale = Vector2(0.05, 0.05)
columns = 2

[node name="WoodSwordButton" type="Button" parent="CanvasLayer/GridMenus/WeaponsMenu/WeaponsGrid"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.47451, 0.47451, 0.47451, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 300
theme_override_styles/focus = SubResource("StyleBoxFlat_c0m4k")
disabled = true
text = "Wood Sword"
icon = ExtResource("10_lgq7s")
flat = true
icon_alignment = 1
vertical_icon_alignment = 2

[node name="MetalSwordButton" type="Button" parent="CanvasLayer/GridMenus/WeaponsMenu/WeaponsGrid"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.47451, 0.47451, 0.47451, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 300
theme_override_styles/focus = SubResource("StyleBoxFlat_c0m4k")
disabled = true
text = "Metal Sword"
icon = ExtResource("11_sm41y")
flat = true
icon_alignment = 1
vertical_icon_alignment = 2

[node name="HatsMenu" type="Control" parent="CanvasLayer/GridMenus"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 801.0
offset_top = 70.0
offset_right = 801.0
offset_bottom = 70.0

[node name="CloseButton" type="Button" parent="CanvasLayer/GridMenus/HatsMenu"]
layout_mode = 0
offset_left = -1.0
offset_top = -60.0
offset_right = 17.0
offset_bottom = -29.0
text = "X"

[node name="HatsGrid" type="GridContainer" parent="CanvasLayer/GridMenus/HatsMenu"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
offset_right = 3244.0
offset_bottom = 2160.0
scale = Vector2(0.05, 0.05)
columns = 2

[node name="LeatherHatButton" type="Button" parent="CanvasLayer/GridMenus/HatsMenu/HatsGrid"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.47451, 0.47451, 0.47451, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 300
theme_override_styles/focus = SubResource("StyleBoxFlat_c0m4k")
disabled = true
text = "Leather"
icon = ExtResource("10_6ud44")
flat = true
icon_alignment = 1
vertical_icon_alignment = 2

[node name="MetalHatButton" type="Button" parent="CanvasLayer/GridMenus/HatsMenu/HatsGrid"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.47451, 0.47451, 0.47451, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 300
theme_override_styles/focus = SubResource("StyleBoxFlat_c0m4k")
disabled = true
text = "Metal"
icon = ExtResource("11_rqnai")
flat = true
icon_alignment = 1
vertical_icon_alignment = 2

[connection signal="child_entered_tree" from="Items" to="." method="_on_items_child_entered_tree"]
[connection signal="pressed" from="CanvasLayer/Buttons/ShoesMenuButt" to="." method="_on_shoes_menu_butt_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/GarmentsMenuButt" to="." method="_on_garments_menu_butt_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/HatsMenuButt" to="." method="_on_hats_menu_butt_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/WeaponsMenuButt" to="." method="_on_weapons_menu_butt_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/ReturnButt" to="." method="_on_return_butt_pressed"]
[connection signal="pressed" from="CanvasLayer/GridMenus/ShoesMenu/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="CanvasLayer/GridMenus/ShoesMenu/ShoesGrid/LeatherBootsButton" to="." method="_on_leather_shoe_button_pressed"]
[connection signal="pressed" from="CanvasLayer/GridMenus/ShoesMenu/ShoesGrid/MetalBootsButton" to="." method="_on_metal_boots_button_pressed"]
[connection signal="pressed" from="CanvasLayer/GridMenus/GarmentsMenu/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="CanvasLayer/GridMenus/GarmentsMenu/GarmentsGrid/LeatherGarmentButton" to="." method="_on_leather_garment_button_pressed"]
[connection signal="pressed" from="CanvasLayer/GridMenus/GarmentsMenu/GarmentsGrid/MetalGarmentButton" to="." method="_on_metal_garment_button_pressed"]
[connection signal="pressed" from="CanvasLayer/GridMenus/WeaponsMenu/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="CanvasLayer/GridMenus/WeaponsMenu/WeaponsGrid/WoodSwordButton" to="." method="_on_wood_sword_pressed"]
[connection signal="pressed" from="CanvasLayer/GridMenus/WeaponsMenu/WeaponsGrid/MetalSwordButton" to="." method="_on_metal_sword_button_pressed"]
[connection signal="pressed" from="CanvasLayer/GridMenus/HatsMenu/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="CanvasLayer/GridMenus/HatsMenu/HatsGrid/LeatherHatButton" to="." method="_on_leather_hat_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/GridMenus/HatsMenu/HatsGrid/MetalHatButton" to="." method="_on_metal_hat_button_pressed"]
